# ComfyUI_GLM4_Wrapper

./: LICENSE  README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: glm-4-inference.json  glm-4-prompt-enhancer.json
