[project]
name = "comfyui_glm4_wrapper"
description = "ComfyUI GLM-4 Wrapper. This powerful tool enhances your prompt engineering process by allowing users to easily construct detailed, high-quality prompts for image/video generation based on user image and/or user prompts."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=2.4.0", "torchvision>=0.19.0", "transformers==4.44.0", "huggingface-hub>=0.24.5", "sentencepiece>=0.2.0", "jinja2>=3.1.4", "pydantic>=2.8.2", "timm>=1.0.8", "tiktoken>=0.7.0", "numpy==1.26.4", "accelerate>=0.33.0", "sentence_transformers>=3.0.1", "einops>=0.8.0", "pillow>=10.4.0", "sse-starlette>=2.1.3", "bitsandbytes>=0.43.3", "optimum>=1.22.0", "botocore>=1.35.10"]

[project.urls]
Repository = "https://github.com/Nojahhh/ComfyUI_GLM4_Wrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nojahhh"
DisplayName = "ComfyUI_GLM4_Wrapper"
Icon = ""
